MODDATAIMP-1189: Fix update of MARC bibliographic fails with "NullPointerException"